--- a/src/views/test01.html
+++ b/src/views/test01.html
@@ -2,15 +2,24 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
+  <!-- 页面描述，不超过150个字符 -->
+  <meta name="description" content="适用简单 H5 纯静态页面自动化脚手架，或 ajax  请求较少的 H5 需求"/>
+  <meta name="keywords" content="gulp, bower, sass"/>
+  <meta name="author" content="aimee@soundbus.cn"/>
   <!-- 解决自动识别数字为电话号码问题 -->
   <meta name="format-detection" content="telephone=no">
   <!-- UC强制竖屏 -->
   <meta name="screen-orientation" content="portrait">
   <!-- QQ强制竖屏 -->
   <meta name="x5-orientation" content="portrait">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
+    <!-- `width=device-width` 会导致 iPhone 5 添加到主屏后以 WebApp 全屏模式打开页面时出现黑边 http://bigc.at/ios-webapp-viewport-meta.orz -->
+
   <title>test01</title>
   <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
-  <script src="../static/js/vConsole/dist/vconsole.min.js"></script>
+  <!-- <script src="https://res.wx.qq.com/mmbizwap/zh_CN/htmledition/js/vconsole/2.5.1/vconsole.min.js"></script> -->
+  <!-- <script src="https://cdn.bootcss.com/modernizr/2.8.3/modernizr.min.js"></script> -->
+  <link href="https://cdn.bootcss.com/normalize/8.0.0/normalize.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/test01.css">
 </head>
 <body>
